--- a/src/views/details.html
+++ b/src/views/details.html
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="card_right">
-                        <img src="./static/img/the-little-mermaid.jpg"
+                        <img src="/img/the-little-mermaid.jpg"
                             alt="image">
                     </div>
                 </div>
