--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -14,14 +14,16 @@
                 <a href="/details" class="details">Details</a>
             </div>
         </div>
+        {{else}}
+        <div class="no-posts">
+            <p class="no-offer">There are no posts yet...</p>
+        </div>
         {{/each}}
         <!-- If there are posts for creature in the database display each of them -->
 
 
 
         <!-- If there are still no posts in the database display: -->
-        <!-- <div class="no-posts">
-                        <p class="no-offer">There are no posts yet...</p>
-                    </div> -->
+
     </div>
 </section>
